# morset

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: release-wasm.yaml  release.yaml
assets/: manifest.json  sw.js
src/: args.rs  audio.rs  constants.rs  consts.rs  inputs.rs  main.rs  sine_audio.rs  state.rs  utils.rs
src/screens/: listening.rs  main_menu.rs  mod.rs  writing_screen.rs
