[package]
name = "morset"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
bevy_egui = "0.38.0"

[build-dependencies]
embed-resource = "3.0.6"

[features]
local = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
