[package]
name = "morset"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
rodio = "0.21.1"

[build-dependencies]
embed-resource = "3.0.6"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
